--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 
@@ -21,33 +22,257 @@ padding:0px;
     border:solid black 0px;
     text-decoration:none;
     box-sizing:border-box;
-  background:#FFFFF9;
+background-color: #FFFFF9;
    opacity: 1.0;
    display: flex;
    flex-direction: row;
-   justify-content: space-between;
+   justify-content: space-between; 
+}
 
-  
+.container {
+  max-width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 1rem;
 }
-.Links{
- 
- 
-}
-.link{
-  float: left;
+.navigation {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding: 0.5rem 0rem;
+  background-color: #fff;
   color: black;
-  text-align: center;
-  padding: 14px 16px;
+
+}
+
+.navigation-menu {
+  margin-left: auto;
+  margin-right: 8rem;
+}
+.navigation-menu ul {
+  display: flex;
+  padding: 0;
+}
+.navigation-menu li {
+
+  list-style-type: none;
+
+  margin: 0 1rem;
+}
+.navigation-menu li a {
+
   text-decoration: none;
-  font-size: 14px;
+  display: block;
+  width: 100%;
+  color:black;
 }
-.link:hover {
-  background-color: #ddd;
-  color: black;
+.menunav {
+  border: 0;
+  height: 40px;
+  width: 40px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color:white;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  transform: translateY(-50%);
+  display: none;
+}
+ @media screen and (max-width: 768px) {
+  .menunav {
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+  .navigation-menu ul {
+    display: none;
+  }
 }
 
-.link.active {
-  background-color: #04AA6D;
-  color: white;
+@media screen and (max-width: 768px) {
+  .navigation-menu ul {
+    
+    display: none;
+  }
+} 
+@media screen and (max-width: 768px) {
+  .navigation-menu.expanded ul {
+    display: block;
+  }
 }
+
+
+@media screen and (max-width: 393px) {
+  .navigation-menu ul {
+
+    position: absolute;
+    top: 60px;
+    left: 0;
+
+    flex-direction: column;
+   z-index: 99;
+    width: 100%;
+    height:20vh;
+    background-color: white;
+    border-top: 1px solid black;
+  }
+  .navigation-menu li {
+
+    text-align: center;
+    margin: 0;
+  }
+  .navigation-menu li a {
+    color: black;
+    width: 100%;
+    padding: 0.4rem 0;
+  }
+  .navigation-menu li:hover {
+    background-color: #eee;
+  }
+}
+@media screen and (max-width: 414px) {
+  .navigation-menu ul {
+
+    position: absolute;
+    top: 60px;
+   
+    left: 0;
+    flex-direction: column;
+   z-index: 99;
+    width: 100%;
+    height:16vh;
+    background-color: white;
+    border-top: 1px solid black;
+  }
+  .navigation-menu li {
+
+    text-align: center;
+    margin: 0;
+  }
+  .navigation-menu li a {
+    color: black;
+    width: 100%;
+    padding: 0.2rem 0;
+  }
+  .navigation-menu li:hover {
+    background-color: #eee;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .navigation-menu ul {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    flex-direction: column;
+   z-index: 99;
+    width: 100%;
+    height:21vh;
+    background-color: white;
+    border-top: 1px solid black;
+  }
+  .navigation-menu li {
+
+    text-align: center;
+    margin: 0;
+  }
+  .navigation-menu li a {
+    color: black;
+    width: 100%;
+    padding: 0.4rem 0;
+  }
+  .navigation-menu li:hover {
+    background-color: #eee;
+  }
+
+}
+@media screen and (max-width: 540px) {
+  .navigation-menu ul {
+
+    position: absolute;
+    top: 60px;
+   
+    left: 0;
+    flex-direction: column;
+   z-index: 99;
+    width: 100%;
+    height:19vh;
+    background-color: white;
+    border-top: 1px solid black;
+  }
+  .navigation-menu li {
+
+    text-align: center;
+    margin: 0;
+  }
+  .navigation-menu li a {
+    color: black;
+    width: 100%;
+    padding: 0.2rem 0;
+  }
+  .navigation-menu li:hover {
+    background-color: #eee;
+  }
+
+}
+@media screen and (max-width: 280px) {
+  .navigation-menu ul {
+
+    position: absolute;
+    top: 60px;
+    left: 0;
+    flex-direction: column;
+   z-index: 99;
+    width: 100%;
+    height:20vh;
+    background-color: white;
+    border-top: 1px solid black;
+  }
+  .navigation-menu li {
+
+    text-align: center;
+    margin: 0;
+  }
+  .navigation-menu li a {
+    color: black;
+    width: 100%;
+    padding: 0.1rem 0;
+  }
+  .navigation-menu li:hover {
+    background-color: #eee;
+  }
+
+}
+@media screen and (max-width: 375px) {
+  .navigation-menu ul {
+   position: absolute;
+    top: 60px; 
+    left: 0;
+    flex-direction: column;
+   z-index: 99;
+    width: 100%;
+    height:20vh;
+    background-color: white;
+    border-top: 1px solid black;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
