--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -50,11 +50,12 @@ table {
 
   .img{
 
-    height: 100vh;
+    height: 89vh;
     background-image: url("../image/bannerr.svg");
     background-repeat: no-repeat;
     background-size: cover;
     opacity:1;
+    width:100%;
   } 
   .centered {
     position: absolute;
@@ -67,21 +68,21 @@ table {
 .btn_contact{
     
 border-radius: 10px;
-font-size: 10px;
+font-size: 2vh;
 padding: 15px;
 background-color:#229958;
-width: 150px;
+width: 25vh;
 color: white;
 border: none;
   }
 .btn_learn{
-  margin: 10px;
+   margin-left: 5px;
     border-radius: 10px;
   border: 1px solid #229958;
-font-size: 10px;
+font-size: 2vh;
 padding: 15px;
 background-color: #229958;
-width: 150px;
+width: 25vh;
 background-color: transparent;
 color: white;
   }
@@ -99,7 +100,7 @@ margin-top: 30px;
       }
   }
   
-
+/* 
   @media (max-width:767px) {
     .img {
      height:882px !important;
@@ -174,12 +175,12 @@ margin-top: 30px;
       background-size: contain;
   
   }
-}
+} */
 .img::before{
     background-color: rgba(0, 0, 0, 0.79);
     content: '';
     display: block;
-    height: 100%;
+    height: 89vh;
     position: absolute;
     width: 100%;
   }
@@ -187,27 +188,52 @@ margin-top: 30px;
    margin-top: 40px;
   }
   .height{
-  font-size: 75px;
+  font-size: 40px;
   color: white;
   }
   .height2{
-    font-size: 75px;
+    font-size: 40px;
     color: white;
     }
-
-  @media screen and (max-width: 1661px ) {
-   .height{
-    font-size: 60px;
-   }
-   .img{
-    width: 100vw;
-    background-image: url("../image/bannerr.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity:1;
-    position: center;
-   }
+    @media screen and (min-width: 2560px ) {
+      .height{
+        text-align: center;
+   
+         font-size: 80px;
+      }
+      .height2{
+          font-size: 80px;    
+       }
+       .btn_contact{
+    
+border-radius: 10px;
+font-size: 30px;
+padding: 15px;
+background-color:#229958;
+width: 250px;
+color: white;
+border: none;
+height: 80px;
   }
+.btn_learn{
+  margin: 10px;
+    border-radius: 10px;
+  border: 1px solid #229958;
+font-size: 30px;
+padding: 15px;
+background-color: #229958;
+width: 250px;
+background-color: transparent;
+height: 80px;
+color: white;
+  }
+  .p1{
+  font-size: 50px;
+  }
+
+    }
+
+
   
   @media screen and (max-width: 900px ) {
     .height{
@@ -217,23 +243,34 @@ margin-top: 30px;
       font-size: 50px;
      }
   }
-    @media screen and (min-width: 100px ) {
+  @media screen and (max-width: 720px ) {
     .height{
      font-size: 40px;
     }
     .height2{
       font-size: 40px;
      }
+  }
+  @media screen and (max-width: 644px ) {
+    .height{
+     font-size: 35px;
+    }
+    .height2{
+      font-size: 35px;
+     }
+  }
+    @media screen and (min-width: 100px ) {
+ 
     .img{
-      width: 100vw;
+      /* width: 100vw;
       background-image: url("../image/bannerr.svg");
       background-repeat: no-repeat;
       background-size: cover;
-      opacity:1;
+      opacity:1; */
       background-position: center;
      }
   }  
-  @media screen and (max-width: 400px ) {
+  /* @media screen and (max-width: 400px ) {
     .height{
        font-size: 30px;
     }
@@ -241,14 +278,26 @@ margin-top: 30px;
       font-size: 30px;
    }
   }
-  @media screen and (max-width: 450px ) {
+  /* @media screen and (max-width: 450px ) {
    .img{
     height:max-content;
    }
+  } */
+  @media screen and (max-width: 480px ) {
+    .height{
+     /* margin-top: 40px; */
+       font-size: 20px;
+    }
+    .height2{
+        font-size: 20px;    
+     }
+
   }
+
+
   @media screen and (max-width: 375px ) {
     .height{
-     margin-top: 40px;
+     /* margin-top: 40px; */
        font-size: 25px;
     }
     .height2{
@@ -256,6 +305,35 @@ margin-top: 30px;
      }
 
   }
+  @media screen and (max-height: 582px ) {
+    .height{
+     /* margin-top: 40px; */
+       font-size: 20px;
+    }
+    .height2{
+        font-size: 20px;    
+     }
+  }
+  @media screen and (max-height: 495px ) {
+    .height{
+      text-align: center;
+     margin-top: 20px;
+       font-size: 15px;
+    }
+    .height2{
+        font-size: 15px;    
+     }
+  }
+  @media screen and (max-height: 444px ) {
+    .height{
+      text-align: center;
+     margin-top: 20px;
+       font-size: 10px;
+    }
+    .height2{
+        font-size: 10px;    
+     }
+  } 
 
 
 
