--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -16,15 +16,17 @@
 }
 .blog_height{
   background-color: #229958;
-  margin-top: 20px;
+
   width:100%;
   display: flex;
+  flex-direction: column ;
   justify-content: center;
+  align-items: center;
   color: white;
 }
 
 .box{
-  width: 25%;
+  width: 15%;
   height: auto;
   border: 1px solid #ccc;
   margin-right: 1%;
