--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -42,6 +42,7 @@ blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
+  
 }
 table {
 	border-collapse: collapse;
@@ -58,7 +59,12 @@ table {
     width:100%;
   } 
   .centered {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
+    text-align: center;
     top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
