--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -11,7 +11,7 @@
   .Case_containers{
    background-color:#444545;
 
-  
+   padding: 30px;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -26,6 +26,7 @@
    justify-content: space-evenly;
    align-items: center;
     height:25vh;
+    
     
     
   
@@ -44,11 +45,11 @@
   }
   
   .box2{
-    width: 20%;
+    width: 29%;
    
   
     border: 1px solid #ccc;
-    margin-right: 1%;
+    margin-right: 2%;
 
     border-radius: 10px;
     transition: 0.9;
