--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -26,3 +26,11 @@
     background-color: black;
 
 }
+.contact_hr{
+    margin-top: 20px;
+ 
+margin-left: 50px;
+    border: 1px solid rgb(34, 153, 88);
+    width: 100px;
+    
+}
