--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -58,6 +58,23 @@ table {
     opacity:1;
     width:100%;
   } 
+  .img2{
+
+    height: 89vh;
+    background-image: url("../image/banner.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity:1;
+    width:100%;
+  } 
+  .img2::before{
+    background-color: rgba(0, 0, 0, 0.79);
+    content: '';
+    display: block;
+    height: 89vh;
+    position: absolute;
+    width: 100%;
+  }
   .centered {
     display: flex;
     flex-direction: column;
@@ -74,10 +91,10 @@ table {
 .btn_contact{
     
 border-radius: 10px;
-font-size: 2vh;
+font-size: 20px;
 padding: 15px;
 background-color:#229958;
-width: 25vh;
+width: 200px;
 color: white;
 border: none;
   }
@@ -85,10 +102,10 @@ border: none;
    margin-left: 5px;
     border-radius: 10px;
   border: 1px solid #229958;
-font-size: 2vh;
+font-size: 20px;
 padding: 15px;
 background-color: #229958;
-width: 25vh;
+width: 200px;
 background-color: transparent;
 color: white;
   }
@@ -105,6 +122,7 @@ margin-top: 30px;
        
       }
   }
+
   
 /* 
   @media (max-width:767px) {
@@ -222,6 +240,7 @@ border: none;
 height: 80px;
   }
 .btn_learn{
+font-family:"roboto";
   margin: 10px;
     border-radius: 10px;
   border: 1px solid #229958;
@@ -268,6 +287,30 @@ color: white;
     @media screen and (min-width: 100px ) {
  
     .img{
+      /* width: 100vw;
+      background-image: url("../image/bannerr.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity:1; */
+      background-position: center;
+     }
+     .img2{
+      /* width: 100vw;
+      background-image: url("../image/bannerr.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity:1; */
+      background-position: center;
+     }
+  .img3{
+      /* width: 100vw;
+      background-image: url("../image/bannerr.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity:1; */
+      background-position: center;
+     }
+     .img4{
       /* width: 100vw;
       background-image: url("../image/bannerr.svg");
       background-repeat: no-repeat;
@@ -337,10 +380,9 @@ color: white;
        font-size: 10px;
     }
     .height2{
-        font-size: 10px;    
+        font-size: 10px;
      }
   } 
-
 
 
 
