--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -8,6 +8,8 @@
 }
  .service_main{
     width:100%;
+  
+    height: 600px;
   display:flex;
   background-color:#229958;
   
@@ -26,6 +28,7 @@
 .Services{
   
     width:50%;
+    
     background-color:#229958;
    display: flex;
     flex-direction: column;
@@ -49,26 +52,27 @@
     background-color: blue;;
 } */
 .image-grid {
-
+  
     /* Arrange children using flexbox */
     display: flex;
     /* ALlow images to display on multiple lines rather than a single line */
     flex-wrap: wrap;
     /* Container should take up only 90% of the browser, leave 5% space on each side */
-    width: 50%;
+    /* width: 30%; */
     /* Center container */
-    margin: 0 auto;
+    /* margin: 0 auto; */
   }
   .grid-image {
-    width: 20vw;
+
+    width: 200px;
     position: relative;
     /* images display inline by default and act like text. We want them to act like divs, so display block */
     display: block;
-    border-radius: 22px;
+    /* border-radius: 22px; */
     /* our width setting for mobile, one image per line */
     flex-basis: 100%;
     /* provide some space between our images */
-    padding: 10px;
+    padding:20px;
     /* ensure padding doesn't cause images to wrap, it should be within the width rather than in addition */
     box-sizing: border-box;
   }
@@ -76,11 +80,11 @@
 
     position: relative;
     z-index: 3;
-    width:11vw;
-    font-size: 1vw;
+    width:100px;
+    font-size: 15px;
     
    
-    bottom: 3.4vh;
+    bottom: 50px;
     left: 6vw;
     right:left;
   }
@@ -96,7 +100,7 @@
   /* three images per line when browser width exceeds 960px */
   @media only screen and (min-width: 960px) {
     .grid-image {
-      flex-basis: 33.333%;
+      /* flex-basis: 33.333%; */
     }
   }
    
@@ -136,7 +140,7 @@
     display: grid;
     grid-template-columns: auto auto auto ;
     grid-gap: 10px;
-    background-color:#626363;;
+    background-color:rgb(68, 69, 69);
     padding: 10px;
    
     /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
@@ -174,22 +178,11 @@
       /* height:30vh */
    
   }
-  /* .item2{
- 
-    grid-row-end: span 2;
- 
-  }
-  .item3{
- 
-    grid-row-end: span 2;
-  
-
-  } */
   .grid-container2 {
     display: grid;
     grid-template-columns: auto auto auto ;
     grid-gap: 10px;
-    background-color: #626363;
+    background-color: rgb(68, 69, 69);
 
     padding: 10px;
  
@@ -214,7 +207,7 @@ background-color: #72818b;
     display: grid;
     grid-template-columns: auto auto auto ;
     grid-gap: 10px;
-    background-color:  #626363;
+    background-color: rgb(68, 69, 69);
     padding: 10px;
   }
   
@@ -228,13 +221,14 @@ background-color: #72818b;
   }
   
   .itm31 {
+  
     grid-row-end: span 3;
   }
   .grid-container4 {
     display: grid;
     grid-template-columns: auto auto auto ;
     grid-gap: 10px;
-    background-color: #626363;
+    background-color:rgb(68, 69, 69);
     padding: 10px;
   }
   
@@ -309,14 +303,42 @@ background-color: #72818b;
       left: 16vw;
       right:left;
     }
+    
+  }
+  .img_background{
+    width:28vw;
+    height:40vh;
+    opacity:0.4;
+
   }
 .background_img_div{
   background-color: 'black';
 }
+@media only screen and (max-width: 412px) {
 
-
-
+  .img_background{
   
+    width:100px;
+    height:40vh;
+    opacity:0.4;
+
+
+  }
+  .inner__text{
+    width:30px
+  }
+  .dynamic{
+    font-size: 15px;
+  }
+
+}
+.line2{
+  border: 1px solid #229958;
+  width:120px;
+  margin-top: 10px;
+  
+}
+
 
 
   
