--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -1,8 +1,30 @@
+.rec.rec-arrow {
+  border-radius: 0;
+  background-color: green;
+}
+/* round buttons on hover */
+.rec.rec-arrow:hover {
+  border-radius: 50%;
+  background-color: green;
+}
+/* hide disabled buttons */
+.rec.rec-arrow:disabled {
+  visibility: hidden;
+}
+/* disable default outline on focused items */
+/* add custom outline on focused items */
+
+
+.rec.rec-dot_active {
+  background: green;
+}
+
 .case_div{
     width:100%;
      /* height:60vh; */
     background-color:#444545;
     display: flex;
+    
     justify-content: center;
     align-items: center;
   
@@ -14,6 +36,7 @@
    padding: 30px;
     display: flex;
     justify-content: center;
+    
     width: 100%;
     
     
@@ -25,23 +48,18 @@
     flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
-    height:25vh;
-    
-    
-    
-  
+    height:25vh; 
   }
   .case_height{
 
   background-color: #444545;
     width:100%;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: white;
-
+  
   }
   
   .box2{
@@ -64,6 +82,10 @@
     text-align: center;
     color: rgb(104, 92, 92);
   }
+  .Carousel2_upper
+  {
+   width:80%;
+  }
   
   
   @media (max-width: 800px){
@@ -81,5 +103,163 @@
         margin-bottom: 4%;
     }
   }
+  .itemm2{
+  
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+
+align-items: center;
+    height: 270px;
+    width: 100%;
+    background-color: #626363;
+    color: #fff;
+    margin: 0 10px;
+    font-family: 'roboto';
+    text-align: center;
+    border-radius: 22px;
+    
+   }
+   @media (max-width: 540px){
+    .itemm2{
+    
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      
+      align-items: center;
+          height: 270px;
+        
+          width: 100%;
+          background-color: #626363;
+          color: #fff;
+          margin: 0 10px;
+          font-family: 'roboto';
+          text-align: center;
+          border-radius: 22px;
+          
+         }
+         .Case_containers{
+          background-color:#444545;
+       
+          padding: 30px;
+           display: flex;
+           justify-content: center;
+           width: 100%;
+           
+           
+           margin: 30px auto;
+           /* background-color: red; */
+         }
+  }
+  @media (max-width: 540px){
+    .itemm2{
+    
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      
+      align-items: center;
+          height: 270px;
+        
+          width: 100%;
+          font-size: 11px;
+          background-color: #626363;
+          color: #fff;
+          margin: 0 10px;
+          font-family: 'roboto';
+          text-align: center;
+          border-radius: 22px;
+          
+         }
+         .Case_containers{
+          background-color:#444545;
+       
+          padding: 30px;
+           display: flex;
+           justify-content: center;
+           width: 100%;
+                     
+           margin: 30px auto;
+           /* background-color: red; */
+         }
+  }
+  @media (max-width: 412px){
+    .Carousel2_upper
+    {
+     width:100%;
+    }
+    .itemm2{
+    
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      
+      align-items: center;
+          height: 270px;
+        
+          width: 100%;
+          font-size: 11px;
+          background-color: #626363;
+          color: #fff;
+          margin: 0 10px;
+          font-family: 'roboto';
+          text-align: center;
+          border-radius: 22px;
+          
+         }
+         .Case_containers{
+          background-color:#444545;
+       
+          /* padding: 30px; */
+           display: flex;
+           justify-content: center;
+           width: 100%;
+                     
+           margin: 30px auto;
+           /* background-color: red; */
+         }
+  }
+
+  @media (max-width: 360px){
+    .Carousel2_upper
+    {
+     width:100%;
+    }
+    .itemm2{
+    
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      
+      align-items: center;
+          height: 270px;
+        
+          width: 100%;
+          font-size: 11px;
+          background-color: #626363;
+          color: #fff;
+          margin: 0 10px;
+          font-family: 'roboto';
+          text-align: center;
+          border-radius: 22px;
+          
+         }
+         .Case_containers{
+          background-color:#444545;
+       
+          /* padding: 30px; */
+           display: flex;
+           justify-content: center;
+           width: 100%;
+                     
+           margin: 30px auto;
+           /* background-color: red; */
+         }
+  }
+
+  
+
+
 
   
