--- a/src/ABOUT/About.css
+++ b/src/ABOUT/About.css
@@ -57,7 +57,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height:90vh;
+  height:100vh;
 
 }
 .about_img{
@@ -81,9 +81,12 @@ flex-direction: column;
   /* background-color: blue; */
   width: 30%; 
 }
+.img_line{
+  width:160px;
+}
 .about_img1{
 width: 82% ;
-height: 60vh;
+height: 500px;
 
 
 opacity: 1.9;
@@ -91,17 +94,18 @@ border-top-left-radius: 22px;
 border-top-right-radius: 22px;
 }
 .about_img2{
- width: 41vw;
+ width: 40.7vw;
  height: 7vh;
 }
 .about_btn{
- font-size: 20px;
+ /* font-size: 14px; */
  align-items:flex-start;
- width: 150px;
- height: 60px;
+ width: 120px;
+ height: 45px;
  background-color: #72818b;
  color: white;
 border-radius: 10px;
+border: none;
 }
 .H_aboutus{
   font-size:40px;
@@ -109,6 +113,7 @@ border-radius: 10px;
   font-family: "roboto";
 }
 .p_aboutus{
+  margin-top: 20px;
   font-size:18px;
   text-align: justify;
   font-family: "roboto";
@@ -133,6 +138,9 @@ border-radius: 10px;
     background-color: #72818b;
     color: white;
    border-radius: 10px;
+   }
+   .img_line{
+    width: 120px;
    }
 
 }
@@ -180,7 +188,6 @@ border-radius: 10px;
     color: white;
    border-radius: 10px;
    
-
    }
 
 }
