--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -135,6 +135,49 @@
       border-radius: 22px;
   }
 }
+@media (max-width: 1669px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 19px;
+  
+    width: 100%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 262px;
+    height:220px;
+      /* border-radius: 22px; */
+  }
+}
+@media (max-width: 1601px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 19px;
+  
+    width: 100%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 247px;
+    height:220px;
+      /* border-radius: 22px; */
+  }
+}
+
   @media (max-width: 1440px){
     .itemm{
       display: flex;
@@ -156,6 +199,49 @@
         border-radius: 22px;
     }
   }
+  @media (max-width: 1389px){
+    .itemm{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: auto;
+      font-size: 19px;
+    
+      width: 100%;
+      background-color:white;
+      color: black;
+      margin: 0 10px;
+      border-radius: 22px;
+    }
+    .Blog_img_style{
+      width: 274px;
+      height:220px;
+        /* border-radius: 22px; */
+    }
+  }
+  @media (max-width: 1389px){
+    .itemm{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: auto;
+      font-size: 19px;
+    
+      width: 100%;
+      background-color:white;
+      color: black;
+      margin: 0 10px;
+      border-radius: 22px;
+    }
+    .Blog_img_style{
+      width: 274px;
+      height:220px;
+        /* border-radius: 22px; */
+    }
+  }
+
 
 @media (max-width: 1280px){
   .itemm{
@@ -178,6 +264,50 @@
       border-radius: 22px;
   }
 }
+
+@media (max-width: 1218px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 19px;
+  
+    width: 100%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 360px;
+    height:220px;
+      border-radius: 22px;
+  }
+}
+@media (max-width: 1190px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 19px;
+  
+    width: 100%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 330px;
+    height:220px;
+      border-radius: 22px;
+  }
+}
+
 @media (max-width: 1024px){
   .itemm{
     display: flex;
@@ -199,6 +329,49 @@
       border-radius: 22px;
   }
 
+}
+@media (max-width: 962px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 19px;
+  
+    width: 100%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 260px;
+    height:220px;
+      border-radius: 22px;
+  }
+
+}
+@media (max-width: 954px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 19px;
+  
+    width: 60%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 330px;
+    height:220px;
+      border-radius: 22px;
+  }
 }
 @media (max-width: 912px){
   .itemm{
@@ -222,6 +395,27 @@
   }
 
 }
+@media (max-width: 866px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 19px;
+  
+    width: 69%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 330px;
+    height:220px;
+      border-radius: 22px;
+  }
+}
 @media (max-width: 820px){
   .itemm{
     display: flex;
@@ -244,7 +438,30 @@
   }
 
 }
-@media (max-width: 768px){
+@media (max-width: 799px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 17px;
+    font-family: 'roboto';
+  
+    width: 100%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 270px;
+    height:220px;
+      border-radius: 22px;
+  }
+
+}
+@media (max-width: 789px){
   .itemm{
     display: flex;
     flex-direction: column;
@@ -264,6 +481,121 @@
     width: 264px;
     height:220px;
       border-radius: 22px;
+  }
+
+}
+@media (max-width: 768px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 17px;
+    font-family: 'roboto';
+  
+    width: 50%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 265px;
+    height:220px;
+      border-radius: 22px;
+  }
+
+}
+@media (max-width: 728px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 17px;
+    font-family: 'roboto';
+  
+    width: 53%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 267px;
+    height:220px;
+      border-radius: 22px;
+  }
+
+}
+@media (max-width: 700px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 17px;
+    font-family: 'roboto';
+  
+    width: 55%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 267px;
+    height:220px;
+      border-radius: 22px;
+  }
+
+}
+@media (max-width: 636px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 17px;
+    font-family: 'roboto';
+  
+    width: 70%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 292px;
+    height:220px;
+      border-radius: 22px;
+  }
+
+}
+@media (max-width: 594px){
+  .itemm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    font-size: 17px;
+    font-family: 'roboto';
+  
+    width: 100%;
+    background-color:white;
+    color: black;
+    margin: 0 10px;
+    border-radius: 22px;
+  }
+  .Blog_img_style{
+    width: 292px;
+    height:220px;
+    border-radius: 22px;
   }
 
 }
