--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -746,6 +746,143 @@
   }
 
 } */
+.MainBlog-grid{
+  background-color: #23A55B;
+  display: flex;
+  justify-content: center;
+
+/* padding: 20px; */
+  flex-wrap: wrap;
+
+  width: 100%;
+  
+
+  margin: 0 auto;
+}
+.Blog-grid-image {
+  /* background-color: #FFFFFF; */
+  display: block;
+  flex-basis: 100%;
+
+  padding: 42px;
+
+  box-sizing: border-box;
+}
+ 
+
+@media only screen and (min-width: 640px) {
+  .Blog-grid-image {
+    flex-basis: 50%;
+  }
+}
+
+@media only screen and (min-width: 960px) {
+  .Blog-grid-image {
+    flex-basis: 33.333%;
+  }
+}
+ 
+
+@media only screen and (min-width: 1280px) {
+  .Blog-grid-image{
+    flex-basis: 25%;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .Blog-grid-image {
+    flex-basis: 20%;
+  }
+}
+.blog_height_Main{
+  background-color:#23A55B;
+  width:100%;
+  display: flex;
+  flex-direction: column ;
+  justify-content: center;
+  align-items: center;
+  color: white;
+
+}
+.mainblog_button_read{
+  margin-left: 80px;
+  background-color: white;
+  color:#23A55B ;
+  border: none;
+  margin-top:10px ;
+
+
+}
+.p_mainblog{
+  font-size: 12px;
+  text-align: justify;
+  margin-top: 20px;
+}
+.h_mainblog{
+  background-color: white;
+  align-items: center;
+  margin-left: 15px;
+  font-weight: bold;
+}
+.inner_Blog-grid{
+  background-color: white;
+  font-family: 'roboto';
+ border-radius: 22px;
+}
+ .inner_Blog-grid:hover{
+background-color: #444545;
+transition: all 0.8s ease;
+
+
+ }
+ .inner_Blog-grid:hover .h_mainblog{
+  background-color: #444545;
+  color:#23A55B ;
+  transition: all 0.8s ease;
+  
+   }
+   .inner_Blog-grid:hover .p_mainblog{
+    color:white ;
+    transition: all 0.8s ease;
+    
+     }
+     .img4{
+
+      height: 89vh;
+      background-image: url("../image/main_blog_image.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity:1;
+      width:100%;
+    } 
+    .img4::before{
+      background-color: rgba(0, 0, 0, 0.79);
+      content: '';
+      display: block;
+      height: 89vh;
+      position: absolute;
+      width: 100%
+    }
+  
+    @media only screen and (max-width: 958px) {
+      .inner_Blog-grid {
+        width: 300px;
+      }
+    }    
+    .Blogs_detail
+    {
+      width: 100%;
+      height: 100vh;
+      background-color: #229958;
+    }
+    .inner_Blogs_detail
+{
+  width: 50%;
+  padding: 20px;
+}
+.BlogDetail_height{
+  font-size: 20px;
+}
 
 
 
