--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -37,6 +37,23 @@
   background-color: green;
 
 }
+.background_casestudies{
+
+  height: 89vh;
+  background-image: url("../image/casestudies_background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity:1;
+  width:100%;
+}
+.background_casestudies::before{
+  background-color: rgba(0, 0, 0, 0.79);
+  content: '';
+  display: block;
+  height: 89vh;
+  position: absolute;
+  width: 100%;
+}
 .card3{
   
   margin: 15px;
@@ -381,8 +398,183 @@ align-items: center;
          }
          
   }
+  .img_casestudies_detail{
+  margin-top: 20px;
+width: 1005px;
+height:503px;
+opacity: 0.8;
 
+border-radius: 46px;
+align-self: center;
+
+
+background: #00011f
+  }
+  .main_CaseStudies_detail{
+    width: 100%;
+    height: 100vh;
+  }
+  .Case_Studies_detail{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 100px;
+    justify-content: center;
+  }
+  .p_div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:800px;
+align-self: center;
+font-family: 'roboto';
+font-size: 15px;
+  }
+  @media screen and (max-width: 1200px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 905px;
+      height:503px;
+      opacity: 0.8;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:800px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:13px ;
+    }
+
+  }
+  @media screen and (max-width: 1078px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 705px;
+      height:503px;
+      opacity: 0.7;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:600px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:13px ;
+    }
+
+  }
+  @media screen and (max-width: 1078px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 505px;
+      height:503px;
+      opacity: 0.8;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:500px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:10px ;
   
+    }
+
+  }
+  @media screen and (max-width: 569px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 405px;
+      height:503px;
+      opacity: 0.8;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:400px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:10px ;
+    }
+
+  }
+  @media screen and (max-width: 445px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 305px;
+      height:303px;
+      opacity: 0.8;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:300px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:10px ;
+    }
+
+  }
+  @media screen and (max-width: 354px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 205px;
+      height:203px;
+      opacity: 0.7;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:200px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:10px ;
+    }
+
+  }
 
 
 
